доделал сектор с фото компудахтера и 6 сектор где написано про поддержку клиентов

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -263,5 +263,59 @@
             </div>
         </div>
     </section>
+    <hr class="around-advantages-and-mobile-version__hr">
+    <section class="fifth-section">
+        <div class="container fifth-section__container">
+            <div class="fifth-section__mobile-version mobile-version">
+                <h3 class="mobile-version__h3">
+                    Мобильная версия
+                </h3>
+                <p class="mobile-version__p">
+                    Пользоваться всем функционалом сервиса удобно в любом месте и с любых устройств
+                </p>
+                <img src="./img/computer-and-phone.png" alt="картинка компьютера и телефона" class="mobile-version__computer-and-iphone">
+            </div>
+        </div>
+    </section>
+    <section class="sixth-section">
+        <div class="container sixth-section__container">
+            <div class="sixth-section__customer-support customer-support">
+                <div class="customer-support__left-wrapper">
+                    <img src="./img/girl-in-customer-support.png" alt="Фото девушки в customer-support">
+                </div>
+                <div class="customer-support__right-wrapper">
+                    <h3 class="customer-support__right-wrapper__h3">
+                        Поддержка клиентов
+                    </h3>
+                    <p class="customer-support__right-wrapper__p">
+                        Мы всегда готовы ответить на любые вопросы <br> в онлайн чате или по телефону
+                    </p>    
+                    <ul class="customer-support__right-wrapper__icons-and-links">
+                        <li class="icons-and-links__li">
+                            <img src="./icons/telegram-in-icons-and-links.png" alt="иконка телеграмма в icons-and-links" class="icons-and-links__li-img">
+                            <p class="icons-and-links__li-p">
+                                Telegram Finio
+                            </p>
+                        </li>
+                        <li class="icons-and-links__li">
+                            <img src="./icons/whats-up-in-icons-and-links.png" alt="иконка whats up в icons-and-links" class="icons-and-links__li-img">
+                            <p class="icons-and-links__li-p">
+                                WhatsApp Finio
+                            </p>
+                        </li>
+                        <li class="icons-and-links__li">
+                            <img src="./icons/litter-in-icons-and-links.png" alt="иконка письма в icons-and-links" class="icons-and-links__li-img">
+                            <p class="icons-and-links__li-p">
+                                hello@finio.ru
+                            </p>
+                        </li>
+                    </ul>
+                    <p class="customer-support__right-wrapper__footer-p">
+                        Кроме того, мы готовы помочь вам с переносом <br> данных из других сервисов или Excel.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
