--- a/final/src/index.html
+++ b/final/src/index.html
@@ -346,5 +346,149 @@
             </div>
         </div>
     </section>
+    <section class="seventh-section">
+        <div class="container seventh-section__container">
+            <div class="seventh-section__tariffs tariffs">
+                <div class="tariffs__title">
+                    <h3 class="tariffs__title__h3">
+                        Тарифы
+                    </h3>
+                    <p class="tariffs__title__p">
+                        Все тарифы имеют полный функционал и отличаются только количеством месяцев и выгодой
+                    </p>
+                </div>
+                <div class="tariffs__flex subscriptions">
+                    <div class="subscriptions__items subscriptions_padding_first">
+                        <h3 class="subscriptions__items__h3">
+                            1 месяц
+                        </h3>
+                        <p class="subscriptions__items__p subscriptions_p-50">
+                            Тариф подойдёт тем, кто ведёт <br> краткосрочные проекты
+                        </p>
+                        <div class="subscriptions__items__calculation">
+                            <p class="subscriptions__items__calculation__p calculation_margin28px">
+                                Общая стоимость
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                1 990 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3">
+                        <div class="subscriptions__items__calculation">
+                            <p class="subscriptions__items__calculation__p calculation_margin72px">
+                                Ваша выгода
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                0 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3">
+                        <div class="subscriptions__items__calculation calculation_last">
+                            <p class="subscriptions__items__calculation__p
+                            calculation_margin20px">
+                                Стоимость месяца
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                1 990 ₽/мес
+                            </p>
+                        </div>
+                        <button class="tariffs__buttons-blue">
+                            <a href="#">
+                                Бесплатно 14 дней
+                            </a>
+                        </button>
+                    </div>
+                    <div class="subscriptions__items subscriptions_padding_second subscriptions_border-and-radius-standart">
+                        <p class="subscriptions-benefit">
+                            Выгода 25%
+                        </p>
+                        <h3 class="subscriptions__items__h3">
+                            6 месяцев
+                        </h3>
+                        <p class="subscriptions__items__p subscriptions_p-50">
+                            Тариф подойдёт для тех, кто <br> уверенно ведёт финансовый учёт
+                        </p>
+                        <div class="subscriptions__items__calculation">
+                            <p class="subscriptions__items__calculation__p
+                            calculation_margin27px">
+                                Общая стоимость
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                8 940 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3__for-calculation_background">
+                        <div class="subscriptions__items__calculation">
+                            <p class="subscriptions__items__calculation__p calculation_margin55px">
+                                Ваша выгода
+                            </p>
+                            <p class="subscriptions__items__calculation__p calculation_background">
+                                3 000 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3">
+                        <div class="subscriptions__items__calculation calculation_last">
+                            <p class="subscriptions__items__calculation__p
+                            calculation_margin19px">
+                                Стоимость месяца
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                1 490 ₽/мес
+                            </p>
+                        </div>
+                        <button class="tariffs__buttons-blue">
+                            <a href="#">
+                                Бесплатно 14 дней
+                            </a>
+                        </button>
+                    </div>
+                    <div class="subscriptions__items subscriptions_padding_third">
+                        <p class="subscriptions-benefit">
+                            Выгода 50%
+                        </p>
+                        <h3 class="subscriptions__items__h3 subscriptions_white">
+                            12 месяцев
+                        </h3>
+                        <p class="subscriptions__items__p subscriptions_p-32">
+                            Тариф подойдёт для тех, кто <br> уверенно ведёт финансовый учёт <br> и хочет сэкономить
+                        </p>
+                        <div class="subscriptions__items__calculation calculation_white">
+                            <p class="subscriptions__items__calculation__p
+                            calculation_margin40px">
+                                Общая стоимость
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                11 880 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3">
+                        <div class="subscriptions__items__calculation calculation_white">
+                            <p class="subscriptions__items__calculation__p calculation_margin67px">
+                                Ваша выгода
+                            </p>    
+                            <p class="subscriptions__items__calculation__p
+                            calculation_background">
+                                12 000 ₽
+                            </p>
+                        </div>
+                        <hr class="calculation__h3">
+                        <div class="subscriptions__items__calculation calculation_white">
+                            <p class="subscriptions__items__calculation__p calculation_margin32px">
+                                Стоимость месяца
+                            </p>
+                            <p class="subscriptions__items__calculation__p">
+                                990 ₽/мес
+                            </p>
+                        </div>
+                        <button class="tariffs__buttons-white">
+                            <a href="#">
+                                Бесплатно 14 дней
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
