доделал этот ебучий грид

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -358,7 +358,7 @@
                     </p>
                 </div>
                 <div class="tariffs__flex subscriptions">
-                    <div class="subscriptions__items subscriptions_padding_first">
+                    <div class="subscriptions__items subscriptions_padding_first subscriptions_border-and-radius-standart">
                         <h3 class="subscriptions__items__h3">
                             1 месяц
                         </h3>
@@ -398,11 +398,11 @@
                             </a>
                         </button>
                     </div>
-                    <div class="subscriptions__items subscriptions_padding_second subscriptions_border-and-radius-standart">
+                    <div class="subscriptions__items subscriptions_padding_second">
                         <p class="subscriptions-benefit">
                             Выгода 25%
                         </p>
-                        <h3 class="subscriptions__items__h3">
+                        <h3 class="subscriptions__items__h3 ">
                             6 месяцев
                         </h3>
                         <p class="subscriptions__items__p subscriptions_p-50">
@@ -449,21 +449,21 @@
                         <h3 class="subscriptions__items__h3 subscriptions_white">
                             12 месяцев
                         </h3>
-                        <p class="subscriptions__items__p subscriptions_p-32">
+                        <p class="subscriptions__items__p subscriptions_p-32 .subscriptions_white-and-gray">
                             Тариф подойдёт для тех, кто <br> уверенно ведёт финансовый учёт <br> и хочет сэкономить
                         </p>
-                        <div class="subscriptions__items__calculation calculation_white">
+                        <div class="subscriptions__items__calculation">
                             <p class="subscriptions__items__calculation__p
-                            calculation_margin40px">
+                            calculation_margin40px subscriptions_white">
                                 Общая стоимость
                             </p>
-                            <p class="subscriptions__items__calculation__p">
+                            <p class="subscriptions__items__calculation__p subscriptions_white">
                                 11 880 ₽
                             </p>
                         </div>
-                        <hr class="calculation__h3">
-                        <div class="subscriptions__items__calculation calculation_white">
-                            <p class="subscriptions__items__calculation__p calculation_margin67px">
+                        <hr class="calculation__h3__for-calculation_background">
+                        <div class="subscriptions__items__calculation">
+                            <p class="subscriptions__items__calculation__p calculation_margin67px subscriptions_white">
                                 Ваша выгода
                             </p>    
                             <p class="subscriptions__items__calculation__p
@@ -472,11 +472,11 @@
                             </p>
                         </div>
                         <hr class="calculation__h3">
-                        <div class="subscriptions__items__calculation calculation_white">
-                            <p class="subscriptions__items__calculation__p calculation_margin32px">
+                        <div class="subscriptions__items__calculation calculation_white calculation_last">
+                            <p class="subscriptions__items__calculation__p calculation_margin32px subscriptions_white">
                                 Стоимость месяца
                             </p>
-                            <p class="subscriptions__items__calculation__p">
+                            <p class="subscriptions__items__calculation__p subscriptions_white">
                                 990 ₽/мес
                             </p>
                         </div>
