--- a/final/src/index.html
+++ b/final/src/index.html
@@ -490,5 +490,28 @@
             </div>
         </div>
     </section>
+    <section class="eighth-section">
+        <div class="container eighth-section__container">
+            <div class="eighth-section__reviews reviews">
+                <h2 class="reviews__top-h2">
+                    Отзывы
+                </h2>
+            </div>
+            <div class="eighth-section__reviews reviews-flex">
+                <div class="reviews-flex__left-wrapper reviews-left">
+                    <h3 class="reviews-left__h3">
+                        Впервые за долгое время <br> увидела свои расходы и <br> доходы как на ладони
+                    </h3>
+                    <p class="reviews-left__p">
+                        Дана Валеева <br>
+                        Продавец Wildberries
+                    </p>
+                </div>
+                <div class="reviews__end__right-wrapper reviews-right">
+                    <img src="./img/girl.png" alt="девушка в 'div'" class="reviews-right__img">
+                </div>
+            </div>  
+        </div>
+    </section>
 </body>
 </html>
