доделал предпослденюю часть сайта

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -509,6 +509,8 @@
                 </div>
                 <div class="reviews__end__right-wrapper reviews-right">
                     <img src="./img/girl.png" alt="девушка в 'div'" class="reviews-right__img">
+                    <img src="./icons/click-right.png" alt="стрелочка для перелистования отзывов вправо" class="reviews-right__right-arrow">
+                    <img src="./icons/click-left.png" alt="стрелочка для перелистования отзывов влево" class="reviews-right__left-arrow">
                 </div>
             </div>  
         </div>
