--- a/final/src/index.html
+++ b/final/src/index.html
@@ -515,5 +515,62 @@
             </div>  
         </div>
     </section>
+    <section class="footer">
+        <div class="container footer__container">
+            <div class="footer__flex-top flex-top">
+                <div class="flex-top__item1">
+                    <img src="./icons/FINIO-icon.png" alt="лого FINIO" class="flex-top__item1__img">
+                    <p class="flex-top__item flex_top-white">
+                        Простой финансовый учёт для продавцов на маркетплейсах
+                    </p>
+                </div>
+                <div class="flex-top__item2">
+                    <p class="flex-top__item">
+                        Возможности <br>
+                        Тарифы <br>
+                        Отзывы <br>
+                        Поддержка клиентов
+                    </p>
+                </div>
+                <div class="flex-top__item3">
+                    <p class="flex-top__item">
+                        Политика конфиденциальности <br>
+                        Пользовательское соглашение <br>
+                        Оплата и возврат <br>
+                        Договор оферта		
+                    </p>
+                </div>
+                <div class="flex-top__item4">
+                    <p class="flex-top__item">
+                        ИП Ларичев Антон Андреевич <br> 
+                        ИНН 773373765379 <br>
+                        ОГРИП 322774600208776 <br>
+                        Эл. почта: <span class="flex_top-white">alarichev@gmail.com</span> <br>
+                        Тел.: +7 (910) 435-75-92 <br>
+                        Москва, Вилиса Лациса 25		
+                    </p>
+                </div>
+            </div>
+            <hr class="footer__hr">
+            <div class="footer__end__all-rights-reserved all-rights-reserved">
+                <div class="all-rights-reserved__left">
+                    <p class="all-rights-reserved__left__p">
+                        © 2022 Finio. Все права защищены.
+                    </p>
+                </div>
+                <div class="all-rights-reserved__right all-rights-reserved__icons-flex">
+                    <div class="icons-flex__icon">
+                        <img src="./icons/visa.png" alt="иконка карты визы" class="icons-flex__icon-visa">
+                    </div>
+                    <div class="icons-flex__icon">
+                        <img src="./icons/master-card.png" alt="иконка карты мастер карт" class="icons-flex__icon-master-card">
+                    </div>
+                    <div class="icons-flex__icon">
+                        <img src="./icons/world.png" alt="иконка карты мир" class="icons-flex__icon-world">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
