готовая верстка, без адаптива

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -518,10 +518,10 @@
     <section class="footer">
         <div class="container footer__container">
             <div class="footer__flex-top flex-top">
-                <div class="flex-top__item1">
-                    <img src="./icons/FINIO-icon.png" alt="лого FINIO" class="flex-top__item1__img">
-                    <p class="flex-top__item flex_top-white">
-                        Простой финансовый учёт для продавцов на маркетплейсах
+                <div class="flex-top__item">
+                    <img src="./icons/FINIO-icon.png" alt="лого FINIO" class="flex-top__item__img">
+                    <p class="flex-top__item">
+                        <span style="color: #FFFFFFB3;">Простой финансовый учёт для <br> продавцов на маркетплейсах</span>
                     </p>
                 </div>
                 <div class="flex-top__item2">
@@ -541,11 +541,11 @@
                     </p>
                 </div>
                 <div class="flex-top__item4">
-                    <p class="flex-top__item">
+                    <p class="flex-top__item flex-top_white">
                         ИП Ларичев Антон Андреевич <br> 
                         ИНН 773373765379 <br>
                         ОГРИП 322774600208776 <br>
-                        Эл. почта: <span class="flex_top-white">alarichev@gmail.com</span> <br>
+                        Эл. почта: <span style="color: #FFFFFF80">alarichev@gmail.com</span> <br>
                         Тел.: +7 (910) 435-75-92 <br>
                         Москва, Вилиса Лациса 25		
                     </p>
